// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexPanel component should render as FlexPanel 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
}

<FlexPanel
  display="flex"
  flexDirection="column"
>
  <div
    className="emotion-0"
  />
</FlexPanel>
`;

exports[`FlexPanel component should render centered FlexPanel 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
}

<FlexPanel
  centered={true}
  display="flex"
  flexDirection="column"
>
  <div
    className="emotion-0"
  />
</FlexPanel>
`;
